--- a/package.json
+++ b/package.json
@@ -5,6 +5,23 @@
     "dependencies": {
         "axios": "^1.8.1",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2"
-    }
+    },
+    "description": "",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/hassannben/tikdlfree.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hassannben/tikdlfree/issues"
+    },
+    "homepage": "https://github.com/hassannben/tikdlfree#readme"
 }
